--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <!-- Main -->
       <main>
         <!-- First Section -->
-        <article class="flex flex-col justify-between items-center sm:flex-row sm:px-10 gap-5">
+        <article class="flex flex-col justify-between items-center sm:flex-row sm:px-10 xl:px-32 gap-5">
           <!-- Text and Button -->
-          <div class="p-2 space-y-5 max-w-[500px]" id="hero-section">
+          <div class="p-2 space-y-5 max-w-[600px] ps-5 xs:ps-10 md:pd-16" id="hero-section">
             <h2 class="text-4xl md:text-5xl lg:text-6xl font-extrabold">
               Maximize skill, minimize budget
             </h2>
@@ -42,11 +42,10 @@
             </button>
           </div>
           <!-- Image -->
-          <div class="max-w-[1000px]">
+          <div class="max-w-[1000px]" id="image-hero-wrapper">
             <div class="xs:relative" id="image-hero">
               <img class="sm:hidden" src="assets/image-hero-mobile@2x.webp" alt="image hero mobile">
-              <img class="hidden sm:block md:hidden" src="assets/image-hero-tablet@2x.png" alt="image-hero-tablet">
-              <img class="hidden md:block" src="assets/image-hero-desktop@2x.png" alt="image-hero-desktop">
+              <img class="hidden sm:block" src="assets/image-hero-desktop@2x.png" alt="image-hero-desktop">
             </div>
           </div>
         </article>
